Almost finished all internal stuff and EDLB